# hri_predict_ros

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  package.xml  setup.py
config/: params.yaml  trajectories.yaml
launch/: execute_trajectories.launch  predictor_bringup.launch  predictor_bringup.xml  record_data_offline.launch  record_data_offline_simple.launch  record_data_online.launch  sharework_cell_bringup.launch
logs/: P_0.csv  P_1.csv  P_2.csv  P_3.csv  P_4.csv  P_5.csv  P_6.csv
msg/: KeypointState.msg
plots/: plot_juggler_config.xml  plot_juggler_config_robot.xml  sub_13_FAST_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True.html  sub_13_FAST_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_FAST_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_PICK-&-PLACE_kp7_x_dt_0.1_k_5_pos_pred_True.html  sub_13_FAST_PICK-&-PLACE_kp7_x_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_FAST_PICK-&-PLACE_kp7_y_dt_0.1_k_5_pos_pred_True.html  sub_13_FAST_PICK-&-PLACE_kp7_y_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_FAST_PICK-&-PLACE_kp7_y_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp1_y_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp4_x_dt_0.1_k_5_pos_pred_True_cone_CA_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp4_x_dt_0.1_k_5_pos_pred_True_cone_IMM_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp4_x_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp7_y_dt_0.1_FILTERS_PAPER.html  sub_13_FAST_REACH-TO-GRASP_kp7_y_dt_0.1_k_5_pos_pred_True_FILTERS_PAPER.html  sub_13_FAST_WALKING_kp0_y_dt_0.1_k_5_pos_pred_True.html  sub_13_FAST_WALKING_kp0_y_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_FAST_WALKING_kp0_y_dt_0.1_k_5_pos_pred_True_cone_CA_PAPER.html  sub_13_FAST_WALKING_kp0_y_dt_0.1_k_5_pos_pred_True_cone_IMM_PAPER.html  sub_13_FAST_WALKING_kp0_y_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_WALKING_kp1_y_dt_0.1_k_5_pos_pred_True.html  sub_13_FAST_WALKING_kp1_y_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_FAST_WALKING_kp1_y_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  sub_13_FAST_WALKING_kp4_x_dt_0.1_FILTERS_PAPER.html  sub_13_FAST_WALKING_kp4_x_dt_0.1_k_5_pos_pred_True_cone_CA_PAPER.html  sub_13_FAST_WALKING_kp4_x_dt_0.1_k_5_pos_pred_True_cone_IMM_PAPER.html  sub_13_FAST_WALKING_kp7_y_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp4_y_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp4_y_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_MEDIUM_PICK-&-PLACE_kp4_z_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp7_x_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp7_y_dt_0.1_k_5_pos_pred_True.html  sub_13_MEDIUM_PICK-&-PLACE_kp7_y_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_MEDIUM_REACH-TO-GRASP_kp4_y_dt_0.1_k_5_pos_pred_True_FILTERS_PAPER.html  sub_13_MEDIUM_REACH-TO-GRASP_kp7_y_dt_0.1_k_5_pos_pred_True_FILTERS_PAPER.html  sub_13_SLOW_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True.html  sub_13_SLOW_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True_cone.html  sub_13_SLOW_PICK-&-PLACE_kp4_x_dt_0.1_k_5_pos_pred_True_cone_PAPER.html  (+71 more)
results/: results_1_steps_cartesianCompute_cartesianEval.csv  results_1_steps_jointCompute_cartesianEval.csv  results_1_steps_jointCompute_jointEval.csv  results_3_steps_cartesianCompute_cartesianEval.csv  results_3_steps_jointCompute_cartesianEval.csv  results_3_steps_jointCompute_jointEval.csv  results_3steps.csv  results_5.csv  results_5_steps.csv  results_5_steps_cartesianCompute_cartesianEval.csv  (+2 more)
scripts/: results_1.csv  (+17 more)
(+49 files in other folders)
